tests/parser/fail/assign-to-self.som
"test:
fail-message:
  - contains: assign
  - contains: self
"

AssignToSelf = (
  run = (
    self := 42.
  )
)
